[gd_scene load_steps=13 format=2]

[ext_resource path="res://Creatures/Creature/Creature.tscn" type="PackedScene" id=1]
[ext_resource path="res://Creatures/Npc/Enemies/Enemy.png" type="Texture" id=2]
[ext_resource path="res://Creatures/Npc/Enemies/Stats.gd" type="Script" id=3]
[ext_resource path="res://Creatures/Npc/Enemies/Enemy.gd" type="Script" id=4]
[ext_resource path="res://Creatures/Npc/Enemies/SelectBox.gd" type="Script" id=5]
[ext_resource path="res://Creatures/Npc/Enemies/HitBox.gd" type="Script" id=6]
[ext_resource path="res://Creatures/Npc/Enemies/AggroRadius.gd" type="Script" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="CircleShape2D" id=2]
radius = 4.12311

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="CircleShape2D" id=4]
radius = 4.0

[sub_resource type="CircleShape2D" id=5]
radius = 635.039

[node name="Enemy" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="SelectBox" parent="." index="2"]
position = Vector2( 0, 4 )
script = ExtResource( 5 )

[node name="SelectBoxShape" parent="SelectBox" index="0"]
position = Vector2( 0, 0 )
shape = SubResource( 2 )

[node name="HitBox" parent="." index="3"]
position = Vector2( 0, 4 )
collision_layer = 32
collision_mask = 2
script = ExtResource( 6 )

[node name="HitBoxShape" parent="HitBox" index="0"]
shape = SubResource( 3 )

[node name="HurtBox" parent="." index="4"]
position = Vector2( 0, 4 )
collision_layer = 4
collision_mask = 0

[node name="HurtBoxShape" parent="HurtBox" index="0"]
shape = SubResource( 4 )

[node name="AggroRadius" type="Area2D" parent="." index="5"]
position = Vector2( 0, 4 )
collision_layer = 0
collision_mask = 8
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroRadius" index="0"]
shape = SubResource( 5 )
disabled = true

[node name="AggroRadiusTimer" type="Timer" parent="AggroRadius" index="1"]

[node name="Stats" parent="." index="6"]
script = ExtResource( 3 )

[connection signal="mouse_exited" from="SelectBox" to="SelectBox" method="_on_SelectBox_mouse_exited"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="timeout" from="HitBox/AttackCooldownTimer" to="HitBox" method="_on_AttackCooldownTimer_timeout"]
[connection signal="body_entered" from="AggroRadius" to="AggroRadius" method="_on_AggroRadius_body_entered"]
[connection signal="body_entered" from="AggroRadius" to="." method="_on_AggroRadius_body_entered"]
[connection signal="timeout" from="AggroRadius/AggroRadiusTimer" to="AggroRadius" method="_on_AggroRadiusTimer_timeout"]
[connection signal="zero_health" from="Stats" to="." method="_on_Stats_zero_health"]
[connection signal="timeout" from="UpdatePathToEnemyTimer" to="." method="_on_UpdatePathToEnemyTimer_timeout"]
